@@ -1,5 +1,7 @@
 Release 1.14 - ???
 
+  * Add mime definition for Windows Media Metafile (TIKA-2004).
+
   * Add mime definitions of iCal and vCalendar (TIKA-2006).
 
   * Upgrade to PDFBox 2.0.2 (TIKA-1996).
